fix: move css for scrollbar to html

--- a/src/templates/index.css
+++ b/src/templates/index.css
@@ -145,7 +145,8 @@ a:hover,
 ::-webkit-scrollbar-corner {
   background-color: #181a1b;
 }
-* {
+
+html {
   scrollbar-color: #2a2c2e #1c1e1f;
 }
 
